Init3 works
Co-authored-by: Copilot <copilot@github.com>